--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "planb1",
   "version": "1.0.0",
   "description": "",
-  "main": "Product.js",
+  "main": "server.js",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -19,7 +19,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
