--- a/frontend4/angular.json
+++ b/frontend4/angular.json
@@ -23,11 +23,14 @@
               "src/favicon.ico",
               "src/assets"
             ],
+
             "styles": [
-              "src/styles.css"
+                       "src/styles.css"
             ],
-            "scripts": []
-          },
+            "scripts": [
+                "node_modules/jquery/dist/jquery.min.js"
+               ]
+             },
           "configurations": {
             "production": {
               "fileReplacements": [
