--- a/BackEnd6/package.json
+++ b/BackEnd6/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "tedious": "^9.2.1"
   }
 }
